--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>The Million Dollar Billboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     
-    <!-- PayPal SDK configured for USD -->
-    <script src="https://www.paypal.com/sdk/js?client-id=ATP3i6lIdhX-ot734c4Hg5HCButYu740X7g5H7L3RVmZ4UTbbG-LC8d819AiTpbQFOPxa71ju82KgYZ7&currency=USD"></script>
+    <!-- PayPal SDK configured for GBP Payment -->
+    <script src="https://www.paypal.com/sdk/js?client-id=ATP3i6lIdhX-ot734c4Hg5HCButYu740X7g5H7L3RVmZ4UTbbG-LC8d819AiTpbQFOPxa71ju82KgYZ7&currency=GBP"></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -107,7 +107,7 @@
                 <div class="mb-4">
                     <label class="block text-sm font-medium text-gray-300 mb-2">Upload Your Image</label>
                     <div class="flex items-center space-x-4">
-                        <img id="image-preview" src="https://placehold.co/80x80/1F2G937/4B5563?text=Preview" class="w-20 h-20 rounded-md object-cover border-2 border-gray-600">
+                        <img id="image-preview" src="https://placehold.co/80x80/1F2937/4B5563?text=Preview" class="w-20 h-20 rounded-md object-cover border-2 border-gray-600">
                         <label for="image-upload" class="cursor-pointer bg-gray-700 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg transition-colors">
                             Choose File
                         </label>
