--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://www.css.gg/css?=|check|info" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display.swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -143,13 +143,14 @@
         // --- IMPORTANT: Set to 'false' before going live! ---
         const TEST_MODE = true;
 
+        // Your web app's Firebase configuration
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyDWvf2nGpOPTLGQJ_q7qY4lCmYxw9n3JWg",
+            authDomain: "themilliondollarbillboar-d003e.firebaseapp.com",
+            projectId: "themilliondollarbillboar-d003e",
+            storageBucket: "themilliondollarbillboar-d003e.appspot.com",
+            messagingSenderId: "980560213272",
+            appId: "1:980560213272:web:016fab11a5a467af9d5a6d"
         };
 
         const app = initializeApp(firebaseConfig);
@@ -430,7 +431,6 @@
             }
         }
 
-        // --- Test Mode Logic ---
         if (TEST_MODE) {
             const testButton = document.createElement('button');
             testButton.textContent = 'Test Upload (No Payment)';
@@ -440,7 +440,7 @@
                     showMessage('Please fill out all fields and upload an image.', 'error');
                     return;
                 }
-                handlePurchase(); // Call the purchase logic directly
+                handlePurchase();
             };
             document.getElementById('paypal-button-container').after(testButton);
         }
