--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://www.css.gg/css?=|check|info" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display.swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -143,12 +143,12 @@
         // --- IMPORTANT: Set to 'false' before going live! ---
         const TEST_MODE = true;
 
-        // Your web app's Firebase configuration
+        // Your web app's Firebase configuration with CORRECTED storageBucket
         const firebaseConfig = {
             apiKey: "AIzaSyDWvf2nGpOPTLGQJ_q7qY4lCmYxw9n3JWg",
             authDomain: "themilliondollarbillboar-d003e.firebaseapp.com",
             projectId: "themilliondollarbillboar-d003e",
-            storageBucket: "themilliondollarbillboar-d003e.appspot.com",
+            storageBucket: "themilliondollarbillboar-d003e.firebasestorage.app", // CORRECTED
             messagingSenderId: "980560213272",
             appId: "1:980560213272:web:016fab11a5a467af9d5a6d"
         };
