--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             cursor: crosshair;
             z-index: 5;
         }
+        #debug-canvas {
+            z-index: 2;
+            pointer-events: none;
+        }
         ::-webkit-scrollbar { width: 8px; }
         ::-webkit-scrollbar-track { background: #1a1a1a; }
         ::-webkit-scrollbar-thumb { background: #0891b2; border-radius: 4px; }
@@ -71,6 +75,7 @@
                 <div class="billboard-spotlight"></div>
                 <div class="relative w-full aspect-square bg-gray-800 canvas-container">
                     <canvas id="pixel-grid" width="1000" height="1000"></canvas>
+                    <canvas id="debug-canvas" width="1000" height="1000"></canvas>
                     <canvas id="selection-canvas" width="1000" height="1000" class="pointer-events-none"></canvas>
                     <!-- Loading Overlay -->
                     <div id="loading-overlay" class="absolute inset-0 bg-gray-800 bg-opacity-80 flex items-center justify-center z-10">
@@ -143,8 +148,8 @@
         import { getFirestore, collection, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js";
         import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-storage.js";
 
-        // --- IMPORTANT: Set to 'false' before going live! ---
         const TEST_MODE = true;
+        const DEBUG_MODE = true; // Set to true to see sold blocks
 
         const firebaseConfig = {
             apiKey: "AIzaSyDWvf2nGpOPTLGQJ_q7qY4lCmYxw9n3JWg",
@@ -163,6 +168,8 @@
         const gridCtx = pixelGridCanvas.getContext('2d');
         const selectionCanvas = document.getElementById('selection-canvas');
         const selectionCtx = selectionCanvas.getContext('2d');
+        const debugCanvas = document.getElementById('debug-canvas');
+        const debugCtx = debugCanvas.getContext('2d');
         const loadingOverlay = document.getElementById('loading-overlay');
         
         const GRID_SIZE = 1000;
@@ -248,6 +255,7 @@
                             }
                         }
                         updateStats();
+                        if (DEBUG_MODE) drawDebugOverlay();
 
                         if (!isDataLoaded && change.type === "added") {
                             loadedImageCount++;
@@ -261,6 +269,15 @@
                 }
             });
         });
+
+        function drawDebugOverlay() {
+            debugCtx.clearRect(0, 0, GRID_SIZE, GRID_SIZE);
+            debugCtx.fillStyle = 'rgba(255, 0, 0, 0.2)';
+            soldBlocksCache.forEach(coord => {
+                const [x, y] = coord.split(',').map(Number);
+                debugCtx.fillRect(x, y, PIXEL_BLOCK_SIZE, PIXEL_BLOCK_SIZE);
+            });
+        }
 
         function getEventPos(canvas, evt) {
             const rect = canvas.getBoundingClientRect();
